StanfordXmlParser: optimize number of SQL calls
Naive implementation used up to 40k+ queries - this now reduces that
to less than 10 queries by bulk selecting / inserting values.

The runtime of the parser with this optimization is now 40s-80s
as tested on my machine.

This also fixes duplicate checking on films.